--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
     </div>
 
-    <div class="section-title">Execute Download Links</div>
+    <div class="section-title">Executer Download Links</div>
     <div class="card-grid">
         <div class="exec-card">
             <div class="card-header">
@@ -183,11 +183,11 @@
                 <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477551231072337971/unnamed.png?ex=69a52c51&is=69a3dad1&hm=25003e4305d0708a07ee4ead1d2798f82622c326b5ede32ca6c0404479f861eb&" class="game-icon">
                 <div>
                     <span class="download-tag">Multi-Device</span>
-                    <div class="card-title">All-In-One Hub</div>
+                    <div class="card-title">All-In-One Executer Website</div>
                     <p class="card-desc">Executors for every platform.</p>
                 </div>
             </div>
-            <a href="https://wearedevs.net/exploits" target="_blank" class="btn">DOWNLOAD 📁</a>
+            <a href="https://wearedevs.net/exploits" target="_blank" class="btn">DOWNLOAD EXECUTERS📁</a>
         </div>
     </div>
 
