--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohio Scripts | Experience The Next Level</title>
+    <title>ree_vex | Experience The Next Level</title>
     <style>
         :root {
             --bg-dark: #050510;
@@ -46,6 +46,25 @@
             100% { transform: translateY(-10vh) scale(1.2); opacity: 0; }
         }
 
+        /* --- NOTIFICATION SYSTEM --- */
+        #notification {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%) translateY(-100px);
+            background: rgba(99, 102, 241, 0.2);
+            backdrop-filter: blur(15px);
+            border: 1px solid var(--primary-glow);
+            padding: 12px 30px;
+            border-radius: 50px;
+            font-weight: bold;
+            color: white;
+            z-index: 9999;
+            transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+        #notification.show { transform: translateX(-50%) translateY(0); }
+
         /* --- HEADER --- */
         header {
             padding: 40px 20px;
@@ -76,7 +95,6 @@
             font-size: 16px;
         }
         .search-container input:focus { border-color: var(--primary-glow); box-shadow: 0 0 20px rgba(99, 102, 241, 0.2); }
-        .search-icon { position: absolute; right: 40px; top: 50%; transform: translateY(-50%); color: var(--text-dim); opacity: 0.5; }
 
         /* --- HERO SECTION --- */
         .hero { text-align: center; margin-bottom: 60px; padding: 0 20px; }
@@ -116,38 +134,39 @@
             text-transform: uppercase;
         }
         .btn:hover { background: var(--accent-purple); transform: translateY(-3px); box-shadow: 0 8px 15px rgba(99, 102, 241, 0.2); }
+        .btn.locked { background: #334155; }
+        .btn.locked:hover { background: #ef4444; }
 
         /* --- FLOATING DISCORD BUTTON --- */
         .help-container { position: fixed; bottom: 30px; right: 30px; z-index: 100; text-align: right; }
-        .help-bubble { background: var(--accent-purple); padding: 8px 15px; border-radius: 15px 15px 5px 15px; font-size: 11px; font-weight: bold; margin-bottom: 10px; display: inline-block; box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
-        .bot-btn { width: 65px; height: 65px; border-radius: 22px; display: flex; align-items: center; justify-content: center; cursor: pointer; border: 1px solid rgba(255,255,255,0.2); margin-left: auto; overflow: hidden; background: #5865F2; box-shadow: 0 8px 20px rgba(88, 101, 242, 0.4); transition: 0.3s; }
-        .bot-btn:hover { transform: scale(1.1); box-shadow: 0 10px 25px rgba(88, 101, 242, 0.6); }
+        .help-bubble { background: var(--accent-purple); padding: 8px 15px; border-radius: 15px 15px 5px 15px; font-size: 11px; font-weight: bold; margin-bottom: 10px; display: inline-block; }
+        .bot-btn { width: 65px; height: 65px; border-radius: 22px; display: flex; align-items: center; justify-content: center; cursor: pointer; border: 1px solid rgba(255,255,255,0.2); margin-left: auto; overflow: hidden; background: #5865F2; box-shadow: 0 8px 20px rgba(88, 101, 242, 0.4); }
         .discord-img { width: 100%; height: 100%; object-fit: cover; }
     </style>
 </head>
 <body>
 
     <div id="particle-container"></div>
+    <div id="notification">SUCCESSFULLY COPIED! 📋</div>
 
     <header>
         <div class="logo-img">
             <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477547833383977092/392206df-19ba-4c55-9336-8ce993927115.jpg?ex=69a52926&is=69a3d7a6&hm=e0e176e976739b270225554580b98b63b3053bb58a98ffe4c075479ca968c383&" class="logo-box-img">
         </div>
         <div class="brand-text">
-            <h1>Ohio <span class="scripts-word">Scripts</span></h1>
+            <h1>ree_<span class="scripts-word">vex</span></h1>
             <p>BEST SCRIPTS ❄️</p>
         </div>
     </header>
 
     <div class="search-container">
         <input type="text" placeholder="Search scripts...">
-        <span class="search-icon">🔍</span>
     </div>
 
     <div class="hero">
-        <div class="update-tag">Updated Scripts</div>
+        <div class="update-tag">ree_vex v2.0</div>
         <h2>EXPERIENCE THE<br><span>NEXT LEVEL</span> OF<br>EXPLOITING</h2>
-        <p class="sub">Verified, safe, and mobile-compatible scripts.<br>Powered by Ohio Scripts.</p>
+        <p class="sub">Verified, safe, and mobile-compatible scripts.<br>Powered by ree_vex.</p>
     </div>
 
     <div class="section-title">Latest Releases</div>
@@ -162,7 +181,8 @@
                 </div>
             </div>
             <div class="script-display">loadstring(game:HttpGet("https://raw.githubusercontent.com/luacoder312/ohioscripts/refs/heads/main/loader.lua"))()</div>
-            <button class="btn" onclick="copyAction()">COPY SCRIPT 📋</button>
+            
+            <button id="main-btn" class="btn locked" onclick="handleScriptAction()">Unlock Script 🔒</button>
         </div>
     </div>
 
@@ -185,23 +205,23 @@
                 <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477551231072337971/unnamed.png?ex=69a52c51&is=69a3dad1&hm=25003e4305d0708a07ee4ead1d2798f82622c326b5ede32ca6c0404479f861eb&" class="game-icon">
                 <div>
                     <span class="download-tag">Multi-Device</span>
-                    <div class="card-title">All-In-One Executer Website</div>
+                    <div class="card-title">All-In-One Hub</div>
                     <p class="card-desc">Executors for every platform.</p>
                 </div>
             </div>
-            <a href="https://wearedevs.net/exploits" target="_blank" class="btn">DOWNLOAD EXECUTERS📁</a>
+            <a href="https://wearedevs.net/exploits" target="_blank" class="btn">DOWNLOAD 📁</a>
         </div>
     </div>
 
     <div class="help-container">
         <div class="help-bubble">You Need Help?</div>
         <div class="bot-btn" onclick="window.open('https://discord.gg/VVzPXAG5d', '_blank')">
-            <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477552990281007145/images_3.png?ex=69a52df4&is=69a3dc74&hm=34b2c8d2f00bc57dadf5bec654ecd3b1cce38b701f2b6880835deb9f1eb1d9fd&" class="discord-img" alt="Discord">
+            <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477552990281007145/images_3.png?ex=69a52df4&is=69a3dc74&hm=34b2c8d2f00bc57dadf5bec654ecd3b1cce38b701f2b6880835deb9f1eb1d9fd&" class="discord-img">
         </div>
     </div>
 
     <script>
-        // Particle Background
+        // Particle Background Logic
         const container = document.getElementById('particle-container');
         for (let i = 0; i < 35; i++) {
             const p = document.createElement('div');
@@ -213,10 +233,33 @@
             container.appendChild(p);
         }
 
-        function copyAction() {
-            const script = 'loadstring(game:HttpGet("https://raw.githubusercontent.com/luacoder312/ohioscripts/refs/heads/main/loader.lua"))()';
-            navigator.clipboard.writeText(script);
-            alert("Script Copied!");
+        // Sub to Unlock Logic
+        let isUnlocked = false;
+        const ytLink = "https://www.youtube.com/@ree_vex";
+        const scriptContent = 'loadstring(game:HttpGet("https://raw.githubusercontent.com/luacoder312/ohioscripts/refs/heads/main/loader.lua"))()';
+
+        function handleScriptAction() {
+            const btn = document.getElementById('main-btn');
+            
+            if (!isUnlocked) {
+                // Phase 1: Unlock
+                window.open(ytLink, '_blank');
+                isUnlocked = true;
+                btn.classList.remove('locked');
+                btn.innerHTML = "Copy Script 📋";
+                showToast("UNLOCKED! NOW YOU CAN COPY");
+            } else {
+                // Phase 2: Copy
+                navigator.clipboard.writeText(scriptContent);
+                showToast("SCRIPT COPIED TO CLIPBOARD!");
+            }
+        }
+
+        function showToast(msg) {
+            const toast = document.getElementById('notification');
+            toast.innerHTML = msg;
+            toast.classList.add('show');
+            setTimeout(() => toast.classList.remove('show'), 2500);
         }
     </script>
 </body>
