--- a/index.html
+++ b/index.html
@@ -140,10 +140,51 @@
         .btn.sub-lock { background: var(--yt-red); box-shadow: 0 0 20px rgba(255, 0, 0, 0.2); }
         .btn.sub-lock:hover { background: #cc0000; }
 
-        /* --- DISCORD ICON ONLY --- */
-        .help-container { position: fixed; bottom: 30px; right: 30px; z-index: 100; }
-        .bot-btn { width: 65px; height: 65px; border-radius: 22px; display: flex; align-items: center; justify-content: center; cursor: pointer; border: 1px solid rgba(255,255,255,0.2); overflow: hidden; background: #5865F2; transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        .bot-btn:hover { transform: scale(1.1) rotate(5deg); box-shadow: 0 10px 25px rgba(88, 101, 242, 0.5); }
+        /* --- FLOATING DISCORD WITH BUBBLE --- */
+        .help-container { 
+            position: fixed; 
+            bottom: 30px; 
+            right: 30px; 
+            z-index: 100; 
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 10px;
+        }
+
+        .help-bubble {
+            background: var(--accent-purple);
+            color: white;
+            padding: 8px 15px;
+            border-radius: 15px 15px 2px 15px;
+            font-size: 12px;
+            font-weight: 900;
+            text-transform: uppercase;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            animation: bubbleFloat 2s ease-in-out infinite;
+            white-space: nowrap;
+        }
+
+        @keyframes bubbleFloat {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-5px); }
+        }
+
+        .bot-btn { 
+            width: 65px; 
+            height: 65px; 
+            border-radius: 22px; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            cursor: pointer; 
+            border: 1px solid rgba(255,255,255,0.2); 
+            overflow: hidden; 
+            background: #5865F2; 
+            transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+            box-shadow: 0 10px 25px rgba(88, 101, 242, 0.4);
+        }
+        .bot-btn:hover { transform: scale(1.1) rotate(5deg); }
         .discord-img { width: 100%; height: 100%; object-fit: cover; }
     </style>
 </head>
@@ -216,13 +257,14 @@
     </div>
 
     <div class="help-container">
+        <div class="help-bubble">Still Need Help?</div>
         <div class="bot-btn" onclick="window.open('https://discord.gg/VVzPXAG5d', '_blank')">
             <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477552990281007145/images_3.png?ex=69a52df4&is=69a3dc74&hm=34b2c8d2f00bc57dadf5bec654ecd3b1cce38b701f2b6880835deb9f1eb1d9fd&" class="discord-img">
         </div>
     </div>
 
     <script>
-        // Particle System
+        // Particle Background Logic
         const container = document.getElementById('particle-container');
         for (let i = 0; i < 35; i++) {
             const p = document.createElement('div');
@@ -234,12 +276,12 @@
             container.appendChild(p);
         }
 
-        // Logic variables
+        // Sub To Unlock Logic with Persistent Memory
         const ytLink = "https://www.youtube.com/@ree_vex";
         const scriptContent = 'loadstring(game:HttpGet("https://raw.githubusercontent.com/luacoder312/ohioscripts/refs/heads/main/loader.lua"))()';
         const mainBtn = document.getElementById('main-btn');
 
-        // CHECK IF ALREADY UNLOCKED (On Page Load)
+        // Check persistent storage on load
         window.onload = function() {
             if (localStorage.getItem('reevex_unlocked') === 'true') {
                 unlockButton();
@@ -247,12 +289,10 @@
         };
 
         function handleScriptAction() {
-            // If the local storage says it's unlocked, just copy the script
             if (localStorage.getItem('reevex_unlocked') === 'true') {
                 navigator.clipboard.writeText(scriptContent);
                 showToast("SCRIPT COPIED TO CLIPBOARD!");
             } else {
-                // Otherwise, open YouTube and unlock it
                 window.open(ytLink, '_blank');
                 localStorage.setItem('reevex_unlocked', 'true');
                 unlockButton();
